# Log-Monitoring-System

./: CMakeLists.txt  README.md
include/: analytics.h  file_utils.h  log_generator.h  log_parser.h
src/: analytics.cpp  file_utils.cpp  log_generator.cpp  log_parser.cpp  main.cpp
